k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: community-ingress
  namespace: app
spec:
  tls:
    - hosts:
        - my-community.shop
        - api.my-community.shop
        - ws.my-community.shop
      secretName: community-tls-prod
  rules:
    - host: api.my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-api-svc
                port:
                  number: 8000
    - host: my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-fe-svc
                port:
                  number: 80
    - host: ws.my-community.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: community-ws-svc
                port:
                  number: 8001
